[package]
name = "gpp"
description = "A generic C-like preprocessor for Rust."
repository = "https://github.com/Koxiaet/gpp"
license = "MIT OR Apache-2.0"
version = "0.3.0"
authors = ["Koxiaet"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
