[package]
name = "gpp"
description = "A generic C-like preprocessor for Rust."
repository = "https://github.com/Koxiaet/gpp"
license = "MIT OR Apache-2.0"
version = "0.5.1"
authors = ["Koxiaet"]
edition = "2018"

[lib]
name = "gpp"
path = "src/lib.rs"

[dependencies]
clap = { version = "2.33.0", optional = true }

[[bin]]
name = "gpp"
required-features = ["clap"]
