[package]
name = "gpp"
description = "A generic C-like preprocessor for Rust."
repository = "https://github.com/Kestrer/gpp"
license = "MIT OR Apache-2.0"
version = "0.6.2"
authors = ["Kestrer <kestrer.dev@gmail.com>"]
edition = "2018"

[lib]
name = "gpp"
path = "src/lib.rs"

[dependencies]
clap = { version = "2.33.3", optional = true }

[[bin]]
name = "gpp"
required-features = ["clap"]
